# deuterium-orm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
deuterium-plugin/: Cargo.toml
deuterium-plugin/src/: helpers.rs  lib.rs
deuterium-plugin/src/migration/: generator.rs  macro_ext.rs  mod.rs  parser.rs
deuterium-plugin/src/model/: generator.rs  macro_ext.rs  mod.rs  parser.rs
plugin/: Cargo.toml
plugin/src/: define_model.rs  generate.rs  lib.rs  model.rs  parse.rs
src/: define_model_macro.rs  generate.rs  lib.rs  model.rs  parse.rs
src/adapter/: mod.rs  postgres.rs
src/dt_plugin/: generate.rs  mod.rs  model.rs  parse.rs
src/migration/: mod.rs
src/plugin/: define_model.rs  generate.rs  helpers.rs  mod.rs  model.rs  parse.rs
src/plugin/migration/: generator.rs  mod.rs
src/plugin/model/: generator.rs  macro_ext.rs  mod.rs
tests/: tests.rs
