[package]

name = "deuterium_orm"
version = "0.0.1"
authors = ["Stanislav Panferov <fnight.m@gmail.com>"]


[lib]
name = "deuterium_orm"
path = "src/lib.rs"

[features]
default = ["pg"]
pg = ["postgres", "r2d2_postgres"]

[[test]]
name = "tests"

[dependencies.deuterium]
git = "https://github.com/deuterium-orm/deuterium.git"

[dependencies.postgres]
optional = true
git = "https://github.com/sfackler/rust-postgres.git"

[dependencies.r2d2_postgres]
optional = true
git = "https://github.com/sfackler/r2d2-postgres.git"

[dependencies.deuterium_plugin]
path = "./plugin" 

[dependencies.time]
git = "https://github.com/rust-lang/time"