[package]

name = "deuterium_orm"
version = "0.2.0"
description = "Simple ORM for Rust"
authors = ["Stanislav Panferov <fnight.m@gmail.com>"]
keywords = ["sql", "orm"]
license = "MIT"

[lib]
name = "deuterium_orm"
path = "src/lib.rs"
plugin = true

[features]
default = ["pg"]
pg = ["postgres", "r2d2_postgres"]

[[test]]
name = "tests"

[dependencies]
deuterium = "*"
time = "*"

[dependencies.postgres]
version = "*"
optional = true

[dependencies.r2d2_postgres]
version = "*"
optional = true